# FlowSpace

./: README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts
.tmp-tests/: AudioManager.js  LocationPermissionManager.js  weatherAudioConfig.js
scripts/: dev-with-port-guard.mjs
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.macOS.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: macos_location_bridge.m
src-tauri/src/: location.rs  main.rs
src/audio/: AudioManager.ts  LocationPermissionManager.ts  weatherAudioConfig.ts
src/visual/: VisualManager.ts
tests/: audioManager.test.mjs
